Version 2.2.3

 User-visible changes:
  * Improve: backwards compatibility with clive 2.0, 2.1
    1. --format: mp4, hd (mp4_hd), hq, 3gp (3gpp) [youtube]
      1.1. closes Debian #535957
    2. Restore ~/.config/clive/config path support
      2.1. closes Debian #535483
  * Add: ~/.clive/config path support
  * Change: relocate files
    1. ~/.clivelast -> ~/.cache/clive/last
    2. ~/.clivecache -> ~/.cache/clive/cache
  * Change: If HOME environment variable undefined, assume current workdir
  * Fix: Remove "see examples" from pod markup (closes issue #30)
  * Fix: Prevent ".$suffix" output filenames
    1. Use $id if $title is empty and %i was not defined in --filename-format
    2. Related to issue #29
  * Fix: --no-proxy: really disable all proxy use
    1. http_proxy setting was still used if it was set
    2. Closes issue #25
  * Fix: Can't call method "filename" on unblessed reference at Exec.pm line 5x
    1. e.g. clive URL --exec="ls;"
    2. Closes Debian bug #535459
  * Rename: --recall, --recall-file -> --last, --last-file
  * Remove:
    1. CLIVE_HOME environment variable support (flawed)
      1.1. Use instead CLIVE_CACHE
        1.1.1 Defines path to use for clive cache and last files
    2. --home-dir option (ditto)
  * Manual page:
    1. Add note about numeric suffix (closes issue #28)
    2. Fix a number of typos, use better grammar

 Developer-visible changes:
  * Makefile.PL:
    1. Extract VERSION from lib/clive/Config.pm
    2. Add "use warnings/strct"
    3. chmod +x


Version 2.2.2
(July 9, 2009)

 User-visible changes:
  * Change: Google: --format=mp4/best
    1. Default to flv if mp4 is not available
    2. Fix --format=best support

 Developer-visible changes:
  * Add: t/$host.t: NO_INTERNET variable support (closes issue #24)
  * Change: t/02youtube.t test link
    1. Old dropped dead
  * Remove: t/06lastfm.t
    1. t/02youtube.t: includes the same test


Version 2.2.1
(June 21, 2009)

 User-visible changes: